--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,9 @@ include test/la.*
 include test/*.py
 include src/wrapper/common.hpp
 include test/tagrename
+
+include ez_setup.py
 include configure
 include Makefile.in
-include configvars.py
-include siteconf.py.in
+include aksetup_helper.py
+include README_SETUP.txt
