--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include test/la.*
 include test/*.py
 include src/wrapper/common.hpp
 include test/tagrename
+include LICENSE
 
 include ez_setup.py
 include configure
