--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include src/wrapper/common.hpp
 include test/tagrename
 include LICENSE
 
-include distribute_setup.py
+include ez_setup.py
 include configure.py
 include Makefile.in
 include aksetup_helper.py
